Update more tests to use --add-modules